# configure.ac for Pasmo
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.57)

AC_INIT(pasmo, 0.5.3, julian.notfound@gmail.com)

AM_INIT_AUTOMAKE


# Check for programs.


AC_PROG_CXX


# Generate files


AC_CONFIG_FILES([Makefile])

AC_OUTPUT


# End of configure.ac for Pasmo
